--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/react-dom": "^18.2.4",
     "apexcharts": "^3.40.0",
     "cra-template-typescript": "1.2.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
