--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.11",
     "typescript": "^5.0.4"
